<resources>
    <string name="app_name">Car Listing</string>
    <string name="car_model">Car model</string>
    <string name="car_brand">Car brand</string>
    <string name="year_model">Year model</string>
    <string name="mileage">Mileage</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="message_searchbar">Search for car model or brand</string>
    <string name="message_success">Success!</string>
    <string name="message_fail">Failed</string>
    <string name="add_menu_name">Add car</string>
    <string name="display_menu_name">Display car</string>
    <string name="edit_menu_name">Edit car</string>
    <string name="login">Log in</string>
    <string name="create_account">Create Account</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="deposit_amount">Deposit Amount</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="my_cars">My Cars</string>
    <string name="my_account">My Account</string>
    <string name="buy">Buy</string>
    <string name="my_balance">My balance</string>
    <string name="close">" Close window"</string>
    <string name="create_toast_fill_fields">You need to fill all fields</string>
    <string name="login_failed">Log in failed</string>
    <string name="not_enough_funds">Not enough funds</string>
    <string name="failed_create">Failed to create account</string>
    <string name="success_create">Successfully created account</string>
    <string name="log_out">Log out</string>
</resources>