<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    tools:context=".DisplayActivity">

    <TextView
        android:id="@+id/txtCarModel"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/car_model"
        android:textSize="34sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/txtBrand"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:text="@string/car_brand"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtYear"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:text="@string/year_model"
            android:textSize="24sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/txtMileage"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:text="@string/mileage"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:text="@string/price"
            android:textSize="24sp" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="5"
            android:text="@string/description"
            android:textSize="20sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">


        <Button
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/edit"
            android:textSize="20sp" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:onClick="onConfirmAddBtnClick"
            android:text="@string/delete"
            android:textSize="20sp" />
    </TableRow>

</LinearLayout>