<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cartoonBlue"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/userName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_box_border"
        android:backgroundTint="#C8E3E6"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:text="@string/user_name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogInIcon" />

    <TextView
        android:id="@+id/userBalance"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/text_box_border"
        android:backgroundTint="#C8E3E6"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/my_balance"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <Button
        android:id="@+id/popUpCloseButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/marineBlue"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userBalance" />

    <TextView
        android:id="@+id/PopUpUserNameLabel"
        android:layout_width="135dp"
        android:layout_height="25dp"
        android:text="@string/user_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/userName"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userName" />

    <TextView
        android:id="@+id/PopUpCurrentBalanceLabel"
        android:layout_width="135dp"
        android:layout_height="25dp"
        android:text="@string/my_balance"
        android:textSize="18sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/userBalance"
        app:layout_constraintEnd_toEndOf="@+id/userBalance"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userBalance" />

    <ImageView
        android:id="@+id/LogInIcon"
        android:layout_width="207dp"
        android:layout_height="248dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/car_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>